--- a/index.html
+++ b/index.html
@@ -109,36 +109,36 @@
       <div class="carousel-item active">
         <img src="./Images/slide-show-1.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+          <h5>Masked Woman</h5>
+          <p>women with mask's celebrating mardi gras.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./Images/slide-show-2.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+          <h5>Matching customs</h5>
+          <p>a group of people wearing the same custom.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./Images/slide-show-3.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <h5>Parade celebration</h5>
+          <p>Lots of people enjoying the parade.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./Images/slide-show-4.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <h5>mardi gras</h5>
+          <p>mardi gras essence on a table.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./Images/slide-show-5.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <h5>It's all about the masks</h5>
+          <p>if your'e coming in us come in a custom.</p>
         </div>
       </div>
     </div>
