--- a/index.html
+++ b/index.html
@@ -110,21 +110,21 @@
         <img src="./Images/slide-show-1.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Masked Woman</h5>
-          <p>women with mask's celebrating mardi gras.</p>
+          <p>women with masks celebrating mardi gras.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./Images/slide-show-2.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Matching customs</h5>
-          <p>a group of people wearing the same custom.</p>
+          <p>a group of man wearing the same custom.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="./Images/slide-show-3.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Parade celebration</h5>
-          <p>Lots of people enjoying the parade.</p>
+          <p>tons of people enjoying the parade.</p>
         </div>
       </div>
       <div class="carousel-item">
@@ -138,7 +138,7 @@
         <img src="./Images/slide-show-5.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>It's all about the masks</h5>
-          <p>if your'e coming in us come in a custom.</p>
+          <p>if your'e coming, come in a custom.</p>
         </div>
       </div>
     </div>
