--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <section id="slider-section">
     <div class="slider-container">
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
+    <div class="carousel-indicators d-none d-md-flex">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -106,47 +106,48 @@
 
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="./Images/slide-show-1.jpg" class="d-block w-100" alt="...">
+      <img src="./Images/slide-show-1.jpg" class="d-block w-100 d-block d-md-none" alt="...">
+      <div class="carousel-item active ">
+        <img src="./Images/slide-show-1.jpg" class="d-block w-100 d-none d-md-block" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Masked Woman</h5>
           <p>women with masks celebrating mardi gras.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./Images/slide-show-2.jpg" class="d-block w-100" alt="...">
+        <img src="./Images/slide-show-2.jpg" class="d-block w-100 d-none d-md-block" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Matching customs</h5>
           <p>a group of man wearing the same custom.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./Images/slide-show-3.jpg" class="d-block w-100" alt="...">
+        <img src="./Images/slide-show-3.jpg" class="d-block w-100 d-none d-md-block" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Parade celebration</h5>
           <p>tons of people enjoying the parade.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./Images/slide-show-4.jpg" class="d-block w-100" alt="...">
+        <img src="./Images/slide-show-4.jpg" class="d-block w-100 d-none d-md-block" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>mardi gras</h5>
           <p>mardi gras essence on a table.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./Images/slide-show-5.jpg" class="d-block w-100" alt="...">
+        <img src="./Images/slide-show-5.jpg" class="d-block w-100 d-none d-md-block" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>It's all about the masks</h5>
           <p>if your'e coming, come in a custom.</p>
         </div>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <button class="carousel-control-prev d-none d-md-block" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <button class="carousel-control-next d-none d-md-block" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
