--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   
 <div class="videoBackgroundWrapper">
   
-    <video class="background-video" src="./Images/background-video.mp4" muted loop autoplay></video>
+    <video class="background-video" src="./Images/background-video.mp4" muted loop autoplay playsinline></video>
 
 <div class="overlay">
     <h2>MARDI GRAS</h2>
